<resources>
    <string name="app_name">Location App</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Location App</string>
    <string name="latitudeLabel">Latitud</string>
    <string name="LongitudeLabel">Longitud</string>
    <string name="providerLabel">Proveedor:</string>
    <string name="accuracyLabel">Precisión</string>
    <string name="metersUnit">Metros</string>
    <string name="timeToFixLabel">Time to Fix</string>
    <string name="secondsUnit">Segundos</string>
    <string name="enabledProvidersLabel">Proveedores</string>
    <string name="changeLocationProvidersSettingsText">Cambiar Proveedor</string>
    <string name="showPosition">Mostrar en el mapa</string>
</resources>